--- a/views/pages/misc/deobf/faq.html
+++ b/views/pages/misc/deobf/faq.html
@@ -113,5 +113,7 @@
         <p>Also, search up on YT on How to find your Discord Token when using Token Login. This only works on Powermouse but not the best option.</p>
         <p>Token logins on Powermouse (PM Proxy) will require another device also for recovering your Discord account.</p>
         <h4><strong>Best Solution:</strong> Do Ctrl+Shift+R (Hard Reload which clears your cache). Sites here are often updated hence issues that may arise.</h4>
+        <div>
+            <h4>Forked by Landen1345</h4>
     </div>
 </div>
