--- a/views/pages/misc/deobf/faq.html
+++ b/views/pages/misc/deobf/faq.html
@@ -115,5 +115,6 @@
         <h4><strong>Best Solution:</strong> Do Ctrl+Shift+R (Hard Reload which clears your cache). Sites here are often updated hence issues that may arise.</h4>
         <div>
             <h4>Forked by Landen1345</h4>
+        </div>
     </div>
 </div>
