--- a/views/404.html
+++ b/views/404.html
@@ -21,7 +21,7 @@
     <div id="particles-js" class="fullwidth"></div>
     <div id="mainbody" class="fullwidth">
         <div class="box-error text-center">
-            <h1>404 Error</h1>
+            <h1>404 Error :)</h1>
             <p>The requested file was not found on this server!</p>
             <p>View the <a href="/?faq" class="bluelink">FAQ page</a> for help?</p>
         </div>
