--- a/views/pages/nav/credits.html
+++ b/views/pages/nav/credits.html
@@ -56,6 +56,7 @@
                     <li>H (Not Sp&#173;eed)</li>
                     <li>Banan&#173;aV&#173;eyL&#173;over</li>
                     <li>Iro&#173;nA&#173;pp&#173;le (The Ap&#173;ple Add&#173;ict)</li>
+                    <li>Landen :troll:</li>
                 </ul>
                 <p>And everyone else on T&#173;N and to the various testers. :D</p>
             </div>
